--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,6 +6,7 @@ on:
     branches: [ master ] # Trigger on pushes to the main branch
     tags:
       - 'v*'
+  workflow_dispatch:
 
 # Environment variables available to all jobs and steps
 env:
